src/test/deca/syntax/valid/oneline_declaration.deca
// Description:
//          Déclaration de plusieurs entiers sur une seule ligne
//
// Résultat:
//Succès
//
{
    int a , b ; 
    int c = 1 , d = 2 ; 
}