src/test/deca/syntax/invalid/no_semi.deca
//  Description :
//            Pas de ; après la déclaration d'une variable
//
// Résultat:
//missing ';'
//
{
    int a 
}